--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
     
           <ul class="site-nav list">
             <li><a href="./index.html" class="header-link links list">Studio</a></li>
-            <li><a href="./portfolio.html" class="header-link links list">Portfolio</a></li>
+            <li><a href="./portfolio.html" class="header-link current-portfolio links list">Portfolio</a></li>
             <li><a href="/" class="header-link links list">Contacts</a></li>
           </ul>
         </nav>
@@ -57,104 +57,152 @@
               <button type="button" class="button links">Marketing</button>
             </li>
           </ul>
-
+<!-- Protfolio pictures -->
           <ul class="examples list">
             <li class="examples-card">
-              <img
-                src="./images/portfolio/img1.jpg"
-                alt="Interface Concept"
-                width="360"
-              />
-              <div class="description-portfolio">
-                <h2 class="second-header-portfolio">
-                  Banking App Interface Concept
-                </h2>
-                <p class="section-description">App</p>
-              </div>
+              <a href="" class="link-overlay list">
+                <div class="card-box">
+                  <img src="./images/portfolio/img1.jpg" alt="Interface Concept" width="360" />
+                  <div class="card-overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                    Cloud Storage App</p>
+                  </div>
+                </div>
+                <div class="description-portfolio">
+                  <h2 class="second-header-portfolio">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="section-description">App</p>
+                </div>
+              </a>
             </li>
             <li class="examples-card">
-              <img
-                src="./images/portfolio/img2.jpg"
-                alt="Payment"
-                width="360"
-              />
-              <div class="description-portfolio">
+              <a href="" class="link-overlay list">
+                <div class="card-box">
+                  <img src="./images/portfolio/img2.jpg" alt="Payment" width="360" />
+                  <div class="card-overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App ·
+                      Cloud Storage App</p>
+                  </div>
+                </div>
+                <div class="description-portfolio">
                 <h2 class="second-header-portfolio">Cashless Payment</h2>
                 <p class="section-description">Marketing</p>
               </div>
+              </a>
             </li>
             <li class="examples-card">
-              <img
-                src="./images/portfolio/img3.jpg"
-                alt="Veditation app"
-                width="360"
-              />
+              <a href="" class="link-overlay list">
+                <div class="card-box">
+                  <img src="./images/portfolio/img3.jpg" alt="Veditation app" width="360" />
+                  <div class="card-overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App ·
+                      Cloud Storage App</p>
+                  </div>
+                </div>
               <div class="description-portfolio">
                 <h2 class="second-header-portfolio">Meditation App</h2>
                 <p class="section-description">App</p>
               </div>
+              </a>
             </li>
             <li class="examples-card">
-              <img
-                src="./images/portfolio/img4.jpg"
-                alt="taxi service"
-                width="360"
-              />
+              <a href="" class="link-overlay list">
+                <div class="card-box">
+                  <img src="./images/portfolio/img4.jpg" alt="taxi service" width="360" />
+                  <div class="card-overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App ·
+                      Cloud Storage App</p>
+                  </div>
+                </div>
               <div class="description-portfolio">
                 <h2 class="second-header-portfolio">Taxi Service</h2>
                 <p class="section-description">Marketing</p>
               </div>
+              </a>
             </li>
             <li class="examples-card">
-              <img
-                src="./images/portfolio/img5.jpg"
-                alt="Illustrations"
-                width="360"
-              />
+              <a href="" class="link-overlay list">
+                <div class="card-box">
+                  <img src="./images/portfolio/img5.jpg" alt="Illustrations" width="360" />
+                  <div class="card-overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App ·
+                      Cloud Storage App</p>
+                  </div>
+                </div>
               <div class="description-portfolio">
                 <h2 class="second-header-portfolio">Screen Illustrations</h2>
                 <p class="section-description">Design</p>
               </div>
+              </a>
             </li>
             <li class="examples-card">
-              <img
-                src="./images/portfolio/img6.jpg"
-                alt="courses"
-                width="360"
-              />
+              <a href="" class="link-overlay list">
+                <div class="card-box">
+                  <img src="./images/portfolio/img6.jpg" alt="courses" width="360" />
+                  <div class="card-overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App ·
+                      Cloud Storage App</p>
+                  </div>
+                </div>
               <div class="description-portfolio">
                 <h2 class="second-header-portfolio">Online Courses</h2>
                 <p class="section-description">Marketing</p>
               </div>
+              </a>
             </li>
             <li class="examples-card">
-              <img
-                src="./images/portfolio/img7.jpg"
-                alt="instagram"
-                width="360"
-              />
+              <a href="" class="link-overlay list">
+                <div class="card-box">
+                  <img src="./images/portfolio/img7.jpg" alt="instagram" width="360" />
+                  <div class="card-overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App ·
+                      Cloud Storage App</p>
+                  </div>
+                </div>
               <div class="description-portfolio">
                 <h2 class="second-header-portfolio">Instagram Stories Concept</h2>
                 <p class="section-description">Design</p>
               </div>
+              </a>
             </li>
             <li class="examples-card">
-              <img
-                src="./images/portfolio/img8.jpg"
-                alt="organic food"
-                width="360"
-              />
+              <a href="" class="link-overlay list">
+                <div class="card-box">
+                  <img src="./images/portfolio/img8.jpg" alt="organic food" width="360" />
+                  <div class="card-overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App ·
+                      Cloud Storage App</p>
+                  </div>
+                </div>
               <div class="description-portfolio">
                 <h2 class="second-header-portfolio">Organic Food</h2>
                 <p class="section-description">Web Site</p>
               </div>
+              </a>
             </li>
             <li class="examples-card">
-              <img src="./images/portfolio/img9.jpg" alt="cpffee" width="360" />
+              <a href="" class="link-overlay list">
+                <div class="card-box">
+                  <img src="./images/portfolio/img9.jpg" alt="coffee" width="360" />
+                  <div class="card-overlay">
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                      Exotic Fruit Ecommerce App ·
+                      Cloud Storage App</p>
+                  </div>
+                </div>
               <div class="description-portfolio">
                 <h2 class="second-header-portfolio">Fresh Coffee</h2>
                 <p class="section-description">Web Site</p>
               </div>
+              </a>
             </li>
           </ul>
         </div>
