--- a/index.html
+++ b/index.html
@@ -26,18 +26,21 @@
             <a href="./index.html" class="logo list"><span class="logo-accent">WEB</span>STUDIO</a>
           
             <ul class="site-nav list">
-              <li><a href="./index.html" class="header-link links list">Studio</a></li>
-              <li><a href="./portfolio.html" class="header-link links list">Portfolio</a></li>
+              <li><a href="./index.html" class="header-link current links list">Studio</a> 
+            <div class="header-list-item">
+              </div>
+            </li>
+              <li><a href="./portfolio.html" class="header-link  links list">Portfolio</a></li>
               <li><a href="/" class="header-link links list">Contacts</a></li>
             </ul>
           </nav>
             <address class="address">
               <ul class="auth-nav list">
                 <li>
-                  <a href="mailto:info@devstudio.com" class="header-link links list">info@devstudio.com</a>
+                  <a href="mailto:info@devstudio.com" class="links list">info@devstudio.com</a>
                 </li>
                 <li>
-                  <a href="tel:+110001111111" class="header-link links list">+11 (000) 111-11-11</a>
+                  <a href="tel:+110001111111" class="links list">+11 (000) 111-11-11</a>
                 </li>
               </ul>
             </address>
